--- a/client/src/components/styles/Index.css
+++ b/client/src/components/styles/Index.css
@@ -5,6 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  /* change this to background-image later if we want an image instead */
+  background-color: aqua;
 }
 
 code {
