--- a/client/src/styles/home.css
+++ b/client/src/styles/home.css
@@ -1,4 +1,4 @@
-.basics {
+.home {
     margin: 15px;
     color:white;
     text-align: center;
@@ -11,3 +11,4 @@ body {
     max-width: 100%;
     height: auto;
 }
+
